--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<!--
+    Copyright 2018 Zhenjie Yan.
 
-    <data>
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
 
-        <variable
-            name="view"
-            type="com.jqk.andservertest.MainActivity" />
-    </data>
+       http://www.apache.org/licenses/LICENSE-2.0
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <LinearLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <Button
-            android:id="@+id/start"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_start"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="@{view::startServer}"
-            android:text="启动服务"></Button>
+            android:text="@string/start_server"/>
 
         <Button
-            android:id="@+id/stop"
-            android:layout_width="wrap_content"
+            android:id="@+id/btn_stop"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="@{view::stopServer}"
-            android:text="关闭服务"></Button>
+            android:text="@string/stop_server"
+            android:visibility="gone"/>
 
+        <Button
+            android:id="@+id/btn_browse"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/start_browse"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/tv_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_15"
+            android:text="@string/server_stop_succeed"/>
     </LinearLayout>
-</layout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
